# BabyPanda

./: CMakeLists.txt  Makefile  README.md
include/: column.h  dataframe.h  exceptions.h
src/: column.cpp  dataframe.cpp
